# GimbleMultiTracking

./: .gitignore  CMakeLists.txt  README.md
YOLO/: YOLODetect.cpp  YOLODetect.hpp
gimble/: main.cpp
gimble/CameraDriver/: NPPJpegCoder.h
gimble/Common/: Common.hpp
gimble/Cost/: Cost.cpp  Cost.h
gimble/GimUtil/: GimUtil.cpp  GimUtil.h
gimble/OpenGL/: Display.h  display.cpp
gimble/RobustStitcher/: BundleAdjustment.h  CameraParamEstimator.h  Compositor.h  FeatureMatch.cpp  FeatureMatch.h  Warper.h
gimble/Serial/: Serial.cpp  Serial.h
src/darknet/: http_stream.cpp  network.c
src/feature/: FeatureTensor.cpp  FeatureTensor.h  model.cpp  model.h
src/matching/: track.h  tracker.h
